# evaluador-de-profes-backend

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt
alembic/: env.py
alembic/versions/: de0aae6a0c7e_init.py
app/: main.py
app/api/: __init__.py  routes.py
app/api/dependencies/: auth.py  database.py
app/api/schemas/: __init__.py  info.py  pagination.py
app/core/: config.py  database.py  exceptions.py  migrations.py  security.py  seed.py
app/modules/auth/api/: dependencies.py  refresh_token_routes.py  routes.py
app/modules/auth/models/: __init__.py  refresh_token.py
app/modules/auth/repositories/: refresh_token_repository.py
app/modules/auth/schemas/: __init__.py  auth.py  refresh_token.py  tokens.py
app/modules/auth/services/: auth_service.py  refresh_token_service.py
app/modules/users/api/: dependencies.py  routes.py
app/modules/users/models/: user.py
app/modules/users/repositories/: user_repository.py
app/modules/users/schemas/: __init__.py  user.py
app/modules/users/services/: user_service.py
scripts/: seed_database.py
